Corrected including of headers in book's demos
In the "Library demo - multi-threaded operation" section, we were
mistakenly using double quotes to import the Gnuastro headers. This is now
corrected to `<>'.

--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -25992,8 +25992,8 @@ system and you can safely use it as a guide.
 #include <stdio.h>
 #include <stdlib.h>
 
-#include "gnuastro/fits.h"
-#include "gnuastro/threads.h"
+#include <gnuastro/fits.h>
+#include <gnuastro/threads.h>
 
 
 /* This structure can keep all information you want to pass onto the
